--- a/CSC4996_Proposal.tex
+++ b/CSC4996_Proposal.tex
@@ -36,6 +36,9 @@
 
 \usepackage{microtype}     % Magically fixes small overfull hbox warnings
 
+\usepackage{pgf-pie}
+
+
 % --- TikZ Libraries ---
 \usetikzlibrary{
     shapes, 
