--- a/frontmatter/abbreviations.tex
+++ b/frontmatter/abbreviations.tex
@@ -8,34 +8,28 @@
 \end{center}
 \vspace{0.5cm}
 
-% Updated [Deep SVDD] to ensure the widest acronym fits in the column
-\begin{acronym}[Deep SVDD] 
-    \acro{ACM}{Association for Computing Machinery}
+% Use [BB-MAS] to ensure consistent column alignment
+\begin{acronym}[BB-MAS] 
     \acro{BB-MAS}{Behavioral Biometrics Multi-device and multi-Activity from Same users}
-    \acro{CKKS}{Cheon-Kim-Kim-Song (Homomorphic Encryption Scheme)}
     \acro{CMU}{Carnegie Mellon University}
     \acro{Deep SVDD}{Deep Support Vector Data Description}
     \acro{DL}{Deep Learning}
     \acro{EER}{Equal Error Rate}
     \acro{FAR}{False Acceptance Rate}
-    \acro{FHE}{Fully Homomorphic Encryption}
     \acro{FN}{False Negative}
     \acro{FP}{False Positive}
     \acro{FRR}{False Rejection Rate}
-    \acro{GPU}{Graphics Processing Unit}
+    \acro{GRR}{Gaussian Random Projection}
     \acro{HE}{Homomorphic Encryption}
-    \acro{IEEE}{Institute of Electrical and Electronics Engineers}
-    \acro{IND-CPA}{Indistinguishability under Chosen Plaintext Attack}
     \acro{IoT}{Internet of Things}
     \acro{JL}{Johnson-Lindenstrauss}
-    \acro{LHE}{Leveled Homomorphic Encryption}
+    \acro{KMT}{Keystroke and Mouse Trajectory}
     \acro{LSTM}{Long Short-Term Memory}
     \acro{MSE}{Mean Squared Error}
-    \acro{PII}{Personally Identifiable Information}
     \acro{PIN}{Personal Identification Number}
-    \acro{PINs}{Personal Identification Numbers}
-    \acro{R-RCM}{Robust Recurrent Confidence Model}
+    \acro{ReLU}{Rectified Linear Unit}
     \acro{RNN}{Recurrent Neural Network}
+    \acro{SMPC}{Secure Multi-Party Computation}
     \acro{SU-AIS}{Syracuse University and Assured Information Security}
     \acro{SVDD}{Support Vector Data Description}
     \acro{SVM}{Support Vector Machine}
