--- a/frontmatter/listoftables.tex
+++ b/frontmatter/listoftables.tex
@@ -1,6 +1,7 @@
 % --- List of Tables Page ---
-\clearpage
+
 \thispagestyle{plain} % Shows the Roman numeral 'v' at the bottom 
+\vspace{1.0cm}
 
 % Centers your custom title to match the department template 
 \begin{center}
@@ -16,4 +17,3 @@
 
 % Adds the "LIST OF TABLES" entry to the Table of Contents 
 \addcontentsline{toc}{section}{LIST OF TABLES}
-\newpage
