--- a/references.bib
+++ b/references.bib
@@ -196,3 +196,38 @@
   year={2019},
   doi={10.21227/2q3r-8m28}
 }
+
+
+% ==========================================
+% 6. CANCELABLE BIOMETRICS & KEYED PROJECTIONS
+% ==========================================
+
+@article{rathgeb2011cancelable,
+  title={Cancelable biometrics: a survey},
+  author={Rathgeb, Christian and Uhl, Andreas},
+  journal={Information Security Technical Report},
+  volume={16},
+  number={1},
+  pages={1--22},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{teoh2006random,
+  title={Random multispace quantization as an analytic mechanism for bio-hashing of biometric data},
+  author={Teoh, Andrew BJ and Ngo, David CL and Goh, Alwyn},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={28},
+  number={12},
+  pages={1892--1901},
+  year={2006}
+}
+
+@inproceedings{wang2014alignment,
+  title={Alignment-free cancelable fingerprint templates based on m-triplets and keyed random projection},
+  author={Wang, Shi and Hu, Jiankun},
+  booktitle={2014 IEEE 13th International Conference on Trust, Security and Privacy in Computing and Communications},
+  pages={578--585},
+  year={2014},
+  organization={IEEE}
+}
