--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,67 +1,67 @@
 \section[INTRODUCTION]{Introduction}
 %An overview of the research domain and background, highlighting the motivation andsignificance of the study and briefly indicating the existence of a research gap.
 
-\paragraph{Overview of the Research Domain} The more conventional knowledge-based authentication techniques, such passwords and Personal Identification Numbers (PINs), are quickly turning into single points of failure in the constantly changing cybersecurity landscape of today. Well-known assaults like shoulder surfing, brute-force attacks, and social engineering can affect these static authentication systems. Behavioral Biometrics, more especially Keystroke Dynamics \cite{gaines1980authentication, joyce1990identity} and Mouse Dynamics \cite{ahmed2007new}, has become a strong alternative authentication technique for confirming digital identification in response to the drawbacks and weaknesses of static authentication approaches. Behavioral biometrics enable continuous and passive user authentication based on a user's unique typing patterns or mouse movement trajectories, as opposed to static passwords, which authenticate what a user knows \cite{shepherd1995continuous, mondal2017continuous}.
+\paragraph{Overview of the Research Domain} 
+The more conventional knowledge-based authentication techniques, such as passwords and \ac{PIN}s, are quickly turning into single points of failure in the constantly changing cybersecurity landscape of today. Well-known assaults like shoulder surfing, brute-force attacks, and social engineering can affect these static authentication systems. 
 
-\paragraph{Motivation and Significance} The use of behavioral biometrics creates a significant privacy conundrum even if they provide strong defense against unwanted access. In contrast to passwords, biometric characteristics are inherent and unchangeable; if the biometric template is compromised, a user cannot alter their hand geometry or typing rhythm \cite{monrose1999hardening}. The storing of raw templates in a central database is therefore a high-risk liability since a breach of raw behavioral data results in a permanent loss of digital identity \cite{kim2018user}.
+Behavioral Biometrics, more especially Keystroke Dynamics \cite{gaines1980authentication, joyce1990identity} and Mouse Dynamics \cite{ahmed2007new}, has become a strong alternative authentication technique for confirming digital identification in response to the drawbacks and weaknesses of static authentication approaches. Behavioral biometrics enable continuous and passive user authentication based on a user's unique typing patterns or mouse movement trajectories, as opposed to static passwords, which authenticate what a user knows \cite{shepherd1995continuous, mondal2017continuous}.
 
-\paragraph{} The state-of-the-art solutions to this privacy issue involve the use of heavy cryptographic techniques, including Homomorphic Encryption (HE) \cite{cheon2017homomorphic}, which enables computations to be performed on the encrypted data. Nevertheless, these approaches involve unaffordable computational costs and high system latency, making them unsuitable for real-time, continuous monitoring in resource-constrained edge devices \cite{rahman2021scalable}. This gives rise to a substantial trade-off, whereby the current solutions are either fast and privacy-invasive (using raw data) or private but slow (using heavy encryption).
+\paragraph{Motivation and Significance} The use of behavioral biometrics creates a significant privacy conundrum even if they provide strong defense against unwanted access. In contrast to passwords, biometric characteristics are inherent and unchangeable; if the biometric template is compromised, a user cannot alter their hand geometry or typing rhythm \cite{monrose1999hardening, rathgeb2011cancelable}. The storing of raw templates in a central database is therefore a high-risk liability since a breach of raw behavioral data results in a permanent loss of digital identity \cite{kim2018user, rathgeb2011cancelable}.
+
+\paragraph{} The state-of-the-art solutions to this privacy issue involve the use of heavy cryptographic techniques, including \ac{HE} \cite{cheon2017homomorphic}, which enables computations to be performed on the encrypted data. Nevertheless, these approaches involve unaffordable computational costs and high system latency, making them unsuitable for real-time, continuous monitoring in resource-constrained \ac{IoT} or edge devices \cite{rahman2021scalable}. This gives rise to a substantial trade-off, whereby the current solutions are either fast and privacy-invasive (using raw data) or private but slow (using heavy encryption).
 
 \paragraph{Existence of a Research Gap}
-Unified frameworks that successfully strike a compromise between robust template privacy and high-speed anomaly detection are currently lacking \cite{kiyani2020continuous}. Current "lightweight" methods frequently ignore the requirement for biometric revocability—the capacity to cancel and replace a compromised biometric template—in favor of concentrating only on recognition accuracy \cite{zheng2011efficient}. In order to fill this gap, this study suggests a brand-new, lightweight framework that combines Deep Support Vector Data Description (Deep SVDD) \cite{ruff2018deepsvdd} with Keyed Johnson-Lindenstrauss (JL) Projections \cite{johnson1984extensions}. This method seeks to ensure a safe and smooth user experience by offering mathematically guaranteed privacy and template revocability without the latency costs of conventional encryption.
+Unified frameworks that successfully strike a compromise between robust template privacy and high-speed anomaly detection are currently lacking \cite{kiyani2020continuous}. Current "lightweight" methods frequently ignore the requirement for biometric revocability—the capacity to cancel and replace a compromised biometric template—in favor of concentrating only on recognition accuracy \cite{zheng2011efficient, rathgeb2011cancelable}. In order to fill this gap, this study suggests a brand-new, lightweight framework that combines \ac{Deep SVDD} \cite{ruff2018deepsvdd} with Keyed \ac{JL} Projections \cite{johnson1984extensions}. This method seeks to ensure a safe and smooth user experience by offering mathematically guaranteed privacy and template revocability without the latency costs of conventional encryption.
 
 \subsection{Problem Statement}
 
 %A clear and focused description of the problem, identifying what the issue is, who orwhat is affected, and why existing solutions are insufficient.
 
 
-\paragraph{} The crucial trade-off between user privacy, system latency, and template revocability in continuous behavioral authentication systems is the main issue this study attempts to solve. Although behavioral biometrics, like Keystroke Dynamics and Mouse Trajectories, provide a reliable way to continuously confirm a user's identification, there are serious security vulnerabilities associated with the processing and storage of these behavioral patterns. Behavioral biometrics are inherent and unchangeable, unlike passwords or tokens; if the biometric template is hacked, a person cannot alter their hand shape or biomechanical typing rhythm. Therefore, centralized biometric databases are a high-value target for attackers as a breach of raw behavioral data results in a permanent loss of digital identity.
+\paragraph{} The most important trade-off between user privacy, system latency, and template revocability in continuous behavioral authentication systems is the problem that this research paper tries to solve. Although behavioral biometrics, such as Keystroke Dynamics and \ac{KMT}, are a trustworthy method for continuously authenticating a user’s identity, there are severe security risks linked to the processing and storage of these behavioral patterns. The problem with behavioral biometrics is that they are inherent and immutable, unlike passwords or tokens; if the biometric template is compromised, an individual cannot change their hand shape or typing rhythm \cite{monrose1999hardening, rathgeb2011cancelable}. Thus, biometric databases are a prime target for attackers because, once the raw behavioral data is compromised, an individual loses their digital identity permanently \cite{kim2018user, rathgeb2011cancelable}.
 
 Current approaches fail to address this problem effectively due to a technical dichotomy between security and performance:
 
 \begin{itemize}
-    \item \textbf{Privacy Gaps in High-Accuracy Models:} State-of-the-art deep learning frameworks, such as those utilizing Recurrent Neural Networks (RNNs) or image-based encoding, achieve high recognition accuracy but typically necessitate the storage of raw or minimally transformed behavioral features. This creates a vulnerability where templates are susceptible to reverse-engineering or replay attacks.
+    \item \textbf{Privacy Gaps in High-Accuracy Models:} The most advanced deep learning frameworks, like those based on \acp{RNN} \cite{kiyani2020continuous} or image-based encoding \cite{kim2024kdprint}, provide a high level of recognition accuracy but are normally associated with the need to store the original or slightly processed behavioral features. This introduces a weakness in which the templates are prone to reverse engineering or replay attacks.
     
-    \item \textbf{Efficiency Gaps in Cryptographic Methods:} Strong cryptographic solutions, such as Homomorphic Encryption (HE), allow for secure computation on encrypted data. However, these schemes introduce prohibitive computational overhead and latencies that often render them impractical for real-time monitoring on resource-constrained edge devices.
+    \item \textbf{Efficiency Gaps in Cryptographic Methods:} Effective cryptographic tools, like \ac{HE} \cite{cheon2017homomorphic}, enable computations to be performed on encrypted information in a secure manner. Nevertheless, these methods impose unacceptably high computational costs and delays, making them less feasible for real-time monitoring applications on edge devices \cite{rahman2021scalable}.
     
-    \item \textbf{Lack of Integrated Revocability:} Most existing frameworks focus on verification accuracy but lack a mechanism for ``cancelable'' biometrics. If a template is stolen, there is currently no unified lightweight implementation that allows a user to ``reset'' their biometric identity without an entirely new enrollment or a total loss of privacy.
+    \item \textbf{Lack of Integrated Revocability:} Most of the existing frameworks are concerned with the accuracy of verification results but do not have a way to make biometrics “cancelable” \cite{rathgeb2011cancelable}. If a template is compromised, there is no existing lightweight implementation that would enable a user to “reset” their biometric identity without either a complete new registration or a complete loss of privacy.
 \end{itemize}
 
-There is currently no unified framework that effectively balances these conflicting requirements. This research seeks to bridge this gap by proposing an architecture that utilizes Keyed Johnson-Lindenstrauss (JL) Projections for lightweight, non-invertible feature transformation and Deep Support Vector Data Description (Deep SVDD) for efficient server-side anomaly detection. This approach ensures mathematical irreversibility and template revocability while maintaining the sub-second latency required for continuous authentication.
-
+\paragraph{} There is no common framework yet that can efficiently address these competing demands. This research aims to fill this gap by developing an architecture that employs Keyed \ac{JL} Projections \cite{johnson1984extensions, wang2014alignment} for lightweight and non-invertible feature transformation and \ac{Deep SVDD} \cite{ruff2018deepsvdd} for efficient server-side anomaly detection. This will ensure mathematical irreversibility and template revocability with sub-second latency, which is necessary for continuous authentication.
 
 
 
 \subsection{Research Aim and Objectives}
 
-The primary aim of this research is to develop a lightweight, privacy-preserving framework for continuous behavioral authentication that effectively balances recognition accuracy, system latency, and template revocability. This framework utilizes Keyed Johnson-Lindenstrauss (JL) Projections to ensure the mathematical irreversibility of biometric templates while employing Deep Support Vector Data Description (Deep SVDD) for efficient, one-class anomaly detection in desktop environments.
+The main objective of this research work is to design a lightweight and privacy-friendly framework for continuous behavioral biometric authentication that can efficiently address the trade-off between recognition performance, system delay, and template revocability. This framework uses Keyed \ac{JL} Projections \cite{johnson1984extensions, wang2014alignment} to provide the mathematical irreversibility of biometric templates and \ac{Deep SVDD} \cite{ruff2018deepsvdd} for one-class anomaly detection.
 
 \paragraph{} To achieve this aim, the following specific objectives have been identified:
-
 \begin{enumerate}
-    \item \textbf{To design a privacy-preserving feature transformation pipeline:} Develop a mechanism using Keyed-JL Projections that transforms high-dimensional multimodal features (keystroke and mouse) into a lower-dimensional subspace, ensuring templates are mathematically irreversible and revocable through key renewal.
+    \item \textbf{To design a privacy-preserving feature transformation pipeline:} Develop a mechanism using Keyed-\ac{JL} Projections \cite{johnson1984extensions, teoh2006random} that transforms high-dimensional multimodal features (keystroke and mouse) into a lower-dimensional subspace, ensuring templates are mathematically irreversible and revocable through key renewal.
     
-    \item \textbf{To implement a multimodal behavioral fusion layer:} Integrate independent streams of keystroke dynamics, such as dwell and flight times, and mouse dynamics, including velocity and curvature, into synchronized behavioral frames to increase the entropy of the user profile.
+    \item \textbf{To implement a multimodal behavioral fusion layer:} Combine independent keystroke dynamics, such as dwell time and flight time, and mouse dynamics, such as velocity and curvature, into coordinated behavioral units (\ac{KMT}) \cite{mondal2017continuous} to raise the entropy of the user profile.
     
-    \item \textbf{To develop a lightweight server-side anomaly detection model:} Implement a Deep SVDD classifier capable of distinguishing between legitimate users and impostors by learning a compact hypersphere boundary around the projected privacy-preserving embeddings.
+    \item \textbf{To develop a lightweight server-side anomaly detection model:} Implement a \ac{Deep SVDD} \cite{ruff2018deepsvdd} classifier capable of distinguishing between legitimate users and impostors by learning a compact hypersphere boundary around the projected privacy-preserving embeddings.
     
-    \item \textbf{To evaluate the trade-off between privacy, accuracy, and latency:} Quantify the impact of projection dimension $k$ on authentication performance (Equal Error Rate), system latency (targeting $<200$ms), and resistance to feature recovery attacks.
+    \item \textbf{To evaluate the trade-off between privacy, accuracy, and latency:} Quantify the impact of projection dimension $k$ on authentication performance (\ac{EER}), system latency (targeting $<200$ms), and resistance to feature recovery attacks.
 \end{enumerate}
-
 %The aim and the specific objectives of the proposed research.
 
 \subsection{Research Questions}
 
-To address the identified problem and achieve the research objectives, the following research questions have been formulated. These questions guide the investigation into the viability and performance of the proposed privacy-preserving behavioral authentication framework:
+In order to solve the problem identified and meet the research objectives, the following research questions have been developed. These research questions frame the study on the viability and performance of the proposed privacy-preserving behavioral authentication framework:
 
 \begin{itemize}
-    \item \textbf{RQ1:} To what extent can Keyed-JL Projections preserve the uniqueness of multimodal behavioral biometrics while ensuring the mathematical irreversibility of the stored templates?
+    \item \textbf{RQ1:} To what extent can Keyed-\ac{JL} Projections preserve the uniqueness of multimodal behavioral biometrics while ensuring the mathematical irreversibility of the stored templates \cite{rathgeb2011cancelable, teoh2006random}?
     
-    \item \textbf{RQ2:} What is the optimal projection dimension $k$ that minimizes the Equal Error Rate (EER) of the Deep SVDD model without exceeding the computational latency constraints of real-time monitoring?
+    \item \textbf{RQ2:} What is the optimal projection dimension $k$ that minimizes the \ac{EER} of the \ac{Deep SVDD} model \cite{ruff2018deepsvdd} without exceeding the computational latency constraints of real-time monitoring?
     
-    \item \textbf{RQ3:} How effectively does the fusion of keystroke and mouse dynamics mitigate the accuracy degradation typically associated with privacy-preserving feature transformations?
+    \item \textbf{RQ3:} How effectively does the fusion of keystroke and mouse dynamics (\ac{KMT}) \cite{mondal2017continuous} mitigate the accuracy degradation typically associated with privacy-preserving feature transformations?
     
-    \item \textbf{RQ4:} How resilient is the Keyed-JL transformed template against feature recovery and replay attacks compared to traditional deep learning-based authentication models?
+    \item \textbf{RQ4:} How resilient is the Keyed-\ac{JL} transformed template against feature recovery and replay attacks compared to traditional \ac{DL}-based authentication models \cite{kim2018user, wang2014alignment}?
 \end{itemize}
 %Research questions of the proposed research. They may also be expressed as hypothesesto be tested.
 
